# Betr-Eats

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/: main.py
app/ui/: constants.py  filters.py  sidebar.py  widgets.py
app/ui/records/: exercises.py  goals.py  meals.py  weight.py
app/ui/tabs/: add.py  chat.py  edit.py  reports.py
database/dev/: docker-compose.yml
infra/: ecs.tf  init.sql  locals.tf  outputs.tf  rds.tf  schema.tf  security.tf  terraform.tfvars.example  variables.tf  vpc.tf
infra/scripts/: apply_schema.sh  streamlit_public_ip.sh
src/betr_eats/agents/: main_agent.py  prompts.py  tools.py
src/betr_eats/db/: __init__.py  conn.py  exercise.py  goals.py  meals.py  weight.py
src/betr_eats/helpers/: model.py
src/betr_eats/reports/: __init__.py  data.py  month.py  prompts.py  six_month.py  summary.py  three_month.py  today.py  week.py  year.py
