[project]
name = "betr-eats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "openai>=2.37.0",
    "openai-agents>=0.17.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
